tests/e2e/not_allowed/is.error
Error: syntax error in story at line 1, column 1

1|    is = 1
      ^^

E0030: `is` is reserved for future use
